2011-02-21  Kai Habel  <kai.habel@gmx.de>

	* src/DLD-FUNCTIONS/__fltk_uigetfile__cc:
	Use forward slash as file seperator for fltk file path processing only.

2011-02-21  Kai Habel  <kai.habel@gmx.de>

	* src/DLD-FUNCTIONS/__init_fltk__.cc(plot_window::plot_window):
	Call size_range early to allow window resizing for MacOS and MinGW.

2011-02-21  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/regexp.cc: Assume we have PCRE.

2010-02-19  Rik  <octave@nomad.inbox5.com>

	* src/DLD-FUNCTIONS/regexp.cc: Use PCRE regular expressions everywhere
	now that Octave requires library for building.  Remove testif PCRE
	on testing blocks and adjust all documentation.
	
2011-02-18  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.cc (axes::properties::sync_positions): Fix a small
	bug introduced with changes from 2011-02-14.

2011-02-15  Konstantinos Poulios  <logari81@googlemail.com>

	Bug #32319.

	* __init_fltk__.cc: Include sysdep.h.
	(class OpenGL_fltk): Replace integer print_fid member with
	boolean print_mode. New class member print_cmd of type string.
	(OpenGL_fltk::print): Accept command string argument instead of
	file id.
	(OpenGL_fltk::draw): Invoke and terminate an octave process for
	the printing job.
	(plot_window::print, figure_manager::print,
	figure_manager::do_print): Replace file id with command string.
	(fltk_graphics_toolkit::print_figure): Remove parsing of file id.
	* graphics.cc (drawnow): Recognize strings beginning with "|" as
	pipelines instead of filenames.

2011-02-14  David Bateman  <dbateman@free.fr>

	* gl-render.cc (void opengl_renderer::draw_patch (
	const patch::properties &)): Obtain the marker color directly
	from the cdata rather that the facecolor, as the facecolor might
	not have been set.  Bug #31801.

2011-02-14  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.cc (axes::properties::sync_positions): Calculation of
	tightinset property.

2011-02-13  Konstantinos Poulios  <logari81@googlemail.com>
